# innowireless_dev

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  make_link.sh  make_link.sh~  start_app.sh
depend/bsmd/: CMakeLists.txt
depend/bsmd/depend/include/gpsd/: gps.h
depend/bsmd/depend/include/j29451/: j29451-types.h
depend/bsmd/depend/include/ltev2x-hal/: ltev2x-hal-api-params.h  ltev2x-hal-api.h  ltev2x-hal-defines.h  ltev2x-hal-types.h  ltev2x-hal.h
depend/bsmd/depend/lib/kvh1a/: libdot3-2016.so.1.5.0
depend/bsmd/output/kvh1a/: bsmd-dsrc-1.5.0  bsmd-ltev2x-1.5.0
depend/bsmd/src/apps/depend/include/dot2-2016/: dot2-types.h
depend/bsmd/src/apps/depend/include/dot3-2016/: dot3-types.h
depend/bsmd/src/apps/depend/include/dot3-2020/: dot3-api.h  dot3.h
depend/bsmd/src/apps/depend/include/ffasn1c/: ffasn1-dot2-2021.h  ffasn1-j2735-2016.h
depend/bsmd/src/apps/depend/include/wlanaccess/: wlanaccess-api-params.h  wlanaccess-api.h  wlanaccess.h
depend/bsmd/src/apps/depend/lib/kvh1a/: libcurl.so.4  libwlanaccess.so.1.4.0
depend/bsmd/src/apps/depend/lib/x64/: libltev2x-hal.so.1.0.0
depend/bsmd/src/apps/utils/common/bsmd/: CMakeLists.txt
depend/bsmd/src/apps/utils/common/bsmd/src/: bsmd-input-params.c  bsmd-log.c  bsmd-poweroff.c  bsmd-security.c
depend/bsmd/src/apps/utils/common/cmhf/: CMakeLists.txt
depend/bsmd/src/apps/utils/common/cmhf/src/: cmhf-make-app.c  cmhf-make-id.c  cmhf-make-pseudonym.c  cmhf.c  cmhf.h
depend/bsmd/src/apps/utils/ltev2x/ip-ltev2x/: CMakeLists.txt
depend/bsmd/src/apps/utils/ltev2x/ip-ltev2x/src/: ip-ltev2x-input-params.c  ip-ltev2x-log.c  ip-ltev2x.c  ip-ltev2x.h
depend/bsmd/src/apps/utils/ltev2x/sdee-ltev2x/: CMakeLists.txt
depend/bsmd/src/apps/utils/ltev2x/sdee-ltev2x/src/: sdee-ltev2x-crypto-material.c  sdee-ltev2x-input-params.c  sdee-ltev2x-rx.c  sdee-ltev2x-tx.c  sdee-ltev2x.c  sdee-ltev2x.h
depend/bsmd/src/apps/utils/ltev2x/wsm-ltev2x/: CMakeLists.txt
depend/bsmd/src/apps/utils/ltev2x/wsm-ltev2x/src/: wsm-ltev2x-asn.c  wsm-ltev2x-input-params.c  wsm-ltev2x-log.c  wsm-ltev2x-rx.c  (+3 more)
depend/bsmd/src/apps/utils/ltev2x/wsm-test-ltev2x/: CMakeLists.txt
depend/bsmd/utils/common/bsmd/src/: bsmd.c
depend/bsmd/utils/common/bsmd/src/include/: bsmd-funcs.h  bsmd.h
depend/v2x-sw/: CMakeLists.txt
depend/v2x-sw/app/kvh1a/wsm/: CMakeCache.txt
depend/v2x-sw/include/kvh1a/dot3-2016/: dot3-api.h
depend/v2x-sw/include/kvh1a/dot3-2020/: dot3-api-params.h  dot3-defines.h  dot3-types.h
depend/v2x-sw/include/kvh1a/ffasn1c/: ffasn1-dot3-2020.h
depend/v2x-sw/include/kvh1a/j29451/: j29451-api-params.h  j29451-defines.h  j29451.h
depend/v2x-sw/include/kvh1a/wlanaccess/: wlanaccess-defines.h
depend/v2x-sw/lib/kvh1a/: libcurl.la  libltev2x-hal.so.1.4.0
depend/v2x-sw/lib/kvh1a_only_wsm/: libj29451.so.1.4.0
depend/v2x-sw_src/src/apps/utils/common/bsmd/: CMakeLists.txt
depend/v2x-sw_src/src/apps/utils/common/pseudonym-cert-req/: CMakeLists.txt
depend/v2x-sw_src/src/apps/utils/common/sec-tester/: CMakeLists.txt
depend/v2x-sw_src/src/apps/utils/common/tcia-2023/: CMakeLists.txt
depend/v2x-sw_src/src/apps/utils/dsrc/addr-dsrc/: CMakeLists.txt
depend/v2x-sw_src/src/libs/dot2-2016/: CMakeLists.txt
depend/v2x-sw_src/src/libs/dot2-2016/src/: dot2-file.c  dot2-internal-defines.h  dot2-internal-funcs.h  dot2-internal-inline.h  dot2-internal-types.h  dot2-internal.h  dot2-log.c  dot2-mib.h  dot2-random.c  dot2.c
depend/v2x-sw_src/src/libs/dot2-2016/src/api/: dot2-api-cert.c  dot2-api-cmhf.c  dot2-api-lcm.c  dot2-api-sec-profile.c  dot2-api-spdu.c  dot2-api.c
depend/v2x-sw_src/src/libs/dot2-2016/src/encrypt/: dot2-ecies.c  dot2-encrypt.c  dot2-encrypt.h
depend/v2x-sw_src/src/libs/dot2-2016/src/lcm/: dot2-lcm-crl-hash.c  dot2-lcm-crl-lv.c  dot2-lcm-crl.c  dot2-lcm-download-app-cert.c  dot2-lcm-download-id-cert.c  dot2-lcm-download-pseudonym-cert.c  dot2-lcm-download.c  dot2-lcm-ecrequest.c  dot2-lcm-ecresponse.c  dot2-lcm-https-get.c  dot2-lcm-https-post.c  dot2-lcm-https.c  dot2-lcm-inline.h  dot2-lcm-lccf.c  dot2-lcm-lpf.c  dot2-lcm-provisioning-app-cert.c  dot2-lcm-provisioning-id-cert.c  dot2-lcm-provisioning-pseudonym-cert.c  dot2-lcm-provisioning.c  dot2-lcm.c  dot2-lcm.h
depend/v2x-sw_src/src/libs/dot2-2016/src/sec-executer/: dot2-sec-executer.c  dot2-sec-executer.h
depend/v2x-sw_src/src/libs/dot2-2016/src/sec-profile/: dot2-sec-profile-inline.h  dot2-sec-profile-replay.c  dot2-sec-profile-replay.h  dot2-sec-profile.c  dot2-sec-profile.h
depend/v2x-sw_src/src/libs/dot2-2016/src/signature/: dot2-sign-verify.c
depend/v2x-sw_src/src/libs/dot2-2016/src/spdu/: dot2-spdu-consistency.c  dot2-spdu-construct.c  dot2-spdu-inline.h  dot2-spdu-process-work.c  dot2-spdu-process.c  dot2-spdu-relevance.c  dot2-spdu.h
depend/v2x-sw_src/src/libs/dot2-2016/test/test-file/: filewrite  filewrite.c
depend/v2x-sw_src/src/libs/dot2-2016/test/unit-test/: test-libdot2.cc
depend/v2x-sw_src/src/libs/dot3-2016/: CMakeLists.txt
depend/v2x-sw_src/src/libs/dot3-2016/src/: dot3-internal-defines.h  dot3-internal-funcs.h  dot3-internal-types.h  dot3-internal.h  dot3-log.c  dot3-mib.h  dot3-mpdu.c  dot3-pci.c  dot3-psr.c  dot3-uas-mgmt.c  dot3-uas.c  dot3-usr.c  dot3-wsa.c  dot3-wsm.c  dot3-wsr.c  dot3.c
depend/v2x-sw_src/src/libs/dot3-2016/src/api/: dot3-api-pci.c  dot3-api-psr.c  dot3-api-uas.c  dot3-api-usr.c  dot3-api-wsa.c  dot3-api-wsm.c  dot3-api-wsr.c  dot3-api.c
depend/v2x-sw_src/src/libs/dot3-2016/test/unit-test/: test-libdot3.cc  test-libdot3.h  test-sample-data.cc  test-sample-wsa.cc
depend/v2x-sw_src/src/libs/j29451/: CMakeLists.txt
depend/v2x-sw_src/src/libs/j29451/src/: j29451-internal-defines.h  j29451-internal-inline.h  j29451-log.c
depend/v2x-sw_src/src/libs/j29451/src/api/: j29451-api.c
depend/v2x-sw_src/src/libs/j29451/src/bsm/: j29451-bsm-tx.c
depend/v2x-sw_src/src/libs/j29451/src/obu/: j29451-obu-gnss-data-buf.c  j29451-obu-gnss-data.c
depend/v2x-sw_src/src/libs/j29451/src/path-info/: j29451-path-history.c
depend/v2x-sw_src/src/libs/j29451/test/unit-test/: test-libj29451.h
(+694 files in other folders)
